@@ -10,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,10 +19,11 @@ public class AttendanceSearchService {
     private final AttendanceRepository attendanceRepository;
 
     public List<LocalDateTime> findByUserMonthLong(User user) {
-        List<Attendance> attendances = attendanceRepository.findByUserAndCreatedAtAfter(user, LocalDateTime.now().minusMonths(1));
+        LocalDateTime monthAgo = LocalDateTime.now().minusMonths(1);
+        List<Attendance> attendances = attendanceRepository.findByUserAndCreatedAtAfter(user, monthAgo);
         return attendances.stream()
                 .map(BaseTimeEntity::getCreatedAt)
-                .collect(Collectors.toList());
+                .sorted()
+                .toList();
     }
-
 }
